--- a/101_150.md
+++ b/101_150.md
@@ -1,4 +1,4 @@
-AWS-SAA-PRACTICE-EXAM Questions 101-150
+# AWS-SAA-PRACTICE-EXAM Questions 101-110
 
 <details>
   <summary>Question 101</summary>
@@ -378,8 +378,9 @@ D. Configure S3 Event Notifications to invoke an AWS Lambda function when an ima
 - [ ] Option B is wrong because: While having the web server upload the original images to S3 is a step towards using S3, it doesn't fundamentally solve the problem of "slow upload requests" if the web server is still the intermediary handling the full upload from the user's browser and potentially doing synchronous resizing. Option C, direct browser upload to S3, is more effective at offloading the web server.
 - [ ] Option E is wrong because: Using a scheduled EventBridge rule to trigger a Lambda function for image resizing means that images would not be processed immediately after upload. Instead, they would be processed in batches when the schedule runs. This could lead to delays in users seeing their resized images and doesn't fit the typical expectation of quick processing after an upload. S3 event notifications (as in option D) provide near real-time, event-driven processing.
 
-
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 111-120
 
 <details>
   <summary>Question 111</summary>
@@ -739,6 +740,8 @@ Application Load Balancers (ALBs) operate at Layer 7 and are designed for HTTP/H
 Again, CloudFront is not appropriate for DNS traffic distribution.
 
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 121-130
 
 <details>
   <summary>Question 121</summary>
@@ -1501,6 +1504,8 @@ C. Purchase a 1-year Compute Savings Plan for the front end and API layer.
 - [ ] Option E is wrong because: An "EC2 Instance Savings Plan" provides discounts primarily for Amazon EC2 instance usage within a specific instance family and AWS Region. It does not apply to AWS Fargate or AWS Lambda usage. Since the front end runs on Fargate and the API on Lambda, an EC2 Instance Savings Plan would not cover these components. A "Compute Savings Plan" (Option C) is needed for broader coverage including Fargate and Lambda.
 
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 141-150
 
 <details>
   <summary>Question 141</summary>
