--- a/301_350.md
+++ b/301_350.md
@@ -1,3 +1,5 @@
+# AWS-SAA-PRACTICE-EXAM Questions 301-310
+
 <details>
   <summary>Question 301</summary>
 
@@ -293,6 +295,7 @@ A. Analyze bucket access patterns by using the S3 Storage Lens dashboard for adv
 
 Therefore, S3 Storage Lens is the most efficient solution for identifying rarely accessed S3 buckets.
 </details>
+
 <details>
   <summary>Question 310</summary>
 
@@ -324,6 +327,9 @@ B. Deploy an Amazon CloudFront distribution with the existing S3 bucket as the o
 
 Therefore, Amazon CloudFront is the most efficient solution for reducing costs and improving performance.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 311-320
+
 <details>
   <summary>Question 311</summary>
 
@@ -480,6 +486,7 @@ D. Turn on Amazon Inspector. Deploy the Amazon Inspector agent to the EC2 instan
 
 Therefore, Amazon Inspector is the most appropriate solution for scanning EC2 instances for vulnerabilities.
 </details>
+
 <details>
   <summary>Question 316</summary>
 
@@ -620,6 +627,7 @@ A company is using a fleet of Amazon EC2 instances to ingest data from on-premis
 -   [ ] C. Store ingested data in an EC2 instance store. Publish data to Amazon Kinesis Data Firehose with Amazon S3 as the destination. Use Amazon Athena to query the data.
 -   [ ] D. Store ingested data in an Amazon Elastic Block Store (Amazon EBS) volume. Publish data to Amazon ElastiCache for Redis. Subscribe to the Redis channel to query the data.
 </details>
+
 <details>
   <summary>Answer</summary>
 
@@ -641,6 +649,8 @@ A. Publish data to Amazon Kinesis Data Streams, Use Kinesis Data Analytics to qu
 
 Therefore, Kinesis Data Streams with Kinesis Data Analytics is the most suitable solution.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 321-330
 
 <details>
   <summary>Question 321</summary>
@@ -958,6 +968,8 @@ A. Create a key in AWS Key Management Service (AWS KMS). Enable encryption for t
 Therefore, using AWS KMS to encrypt RDS instances is the correct solution.
 </details>
 
+# AWS-SAA-PRACTICE-EXAM Questions 331-340
+
 <details>
   <summary>Question 331</summary>
 
@@ -1270,6 +1282,8 @@ A. Use AWS WAF in front of the ALB. Associate the appropriate web ACLs with AWS 
 
 Therefore, AWS WAF is the most appropriate service to mitigate SQL injection attacks.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 341-350
 
 <details>
   <summary>Question 341</summary>
