--- a/351_400.md
+++ b/351_400.md
@@ -1,3 +1,5 @@
+# AWS-SAA-PRACTICE-EXAM Questions 351-360
+
 <details>
   <summary>Question 351</summary>
 
@@ -319,6 +321,8 @@ B. Use an interface endpoint.
 
 Therefore, using an interface endpoint is the most suitable solution for private API communication within a VPC with minimal code changes.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 361-370
 
 <details>
   <summary>Question 361</summary>
@@ -649,6 +653,8 @@ C. Provision a NAT gateway in a public subnet. Modify each private subnet's rout
 Therefore, using a NAT gateway in a public subnet is the most appropriate and managed solution.
 </details>
 
+# AWS-SAA-PRACTICE-EXAM Questions 371-380
+
 <details>
   <summary>Question 371</summary>
 
@@ -965,6 +971,8 @@ B. Set up a new Amazon Aurora PostgreSQL DB cluster that includes an Aurora Repl
 
 Therefore, using Amazon Aurora PostgreSQL with an Aurora Replica is the most appropriate solution for speeding up reporting with minimal code changes.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 381-390
 
 <details>
   <summary>Question 381</summary>
@@ -1286,6 +1294,8 @@ D. Deploy an Amazon ElastiCache for Redis cluster to store customer session info
 
 Therefore, sticky sessions and ElastiCache are the most appropriate solutions for session management with durability.
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 391-400
 
 <details>
   <summary>Question 391</summary>
