--- a/051_100.md
+++ b/051_100.md
@@ -129,8 +129,7 @@ What should a solutions architect do to meet these requirements?
 <details>
   <summary>Answer</summary>
 
-- [ ] A.  Turn
-Correct Answer: C
+- [ ] C. Extend the file share environment to Amazon FSx for Windows File Server with a Multi-AZ configuration. Migrate all the data to FSx for Windows File Server.
 
 Why this is the correct answer:
 
